--- a/weapp/apps/customerized_apps/survey/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/workbench.html
@@ -12,9 +12,9 @@
   <div class="relative">
     <ul class="breadcrumb">
       <li>您当前所在位置</li>
-      <li><a href="/apps/">百宝箱</a></li>
-      <li><a href="/apps/event/events/">活动报名</a></li>
-      <li class="active">新建活动</li>
+      <li><a href="/termite2/pages/">百宝箱</a></li>
+      <li><a href="/apps/survey/surveies/">用户调研</a></li>
+      <li class="active">新建</li>
     </ul>
   </div>
   
@@ -45,14 +45,14 @@
     <button class="xa-save btn btn-primary">保存</button>
     <button class="xa-preview btn btn-default ml20">预览</button>
   {% else %}
-    {% if event.status_text == "未开启" %}
+    {% if survey.status_text == "未开启" %}
     <button class="xa-save btn btn-primary">保存</button>
     <button class="xa-preview btn btn-default ml20">预览</button>
     {% endif %}
-    {% if event.status_text == "进行中" %}
+    {% if survey.status_text == "进行中" %}
     进行中，不可更改
     {% endif %}
-    {% if event.status_text == "已结束" %}
+    {% if survey.status_text == "已结束" %}
     已结束，不可更改
     {% endif %}
   {% endif %}
@@ -60,7 +60,7 @@
 {% endblock %}
 
 {% block base_js %}
-  {{ '["appkit.page", "appkit.componentadder", "appkit.surveydescription", "appkit.textsurvey", "appkit.qa", "appkit.selection", "appkit.shortcuts", "appkit.submitbutton", "appkit.textlist"]'|load_app_components|safe }}
+  {{ '["appkit.page", "appkit.componentadder", "appkit.surveydescription", "appkit.textsurvey", "appkit.qa", "appkit.selection", "appkit.shortcuts", "appkit.submitbutton"]'|load_app_components|safe }}
   <script type="text/x-handlebar-template" id="componentTemplates">
     {{ "appkit"|load_app_components_handlebar_templates|safe }}
   </script>
@@ -76,7 +76,7 @@
   <script type="text/javascript">
     W.uid = {{ user.id }};
     W.projectId = "{{project_id}}";
-    W.activityId = "{{event.id}}";
+    W.activityId = "{{survey.id}}";
     W.host = "{{request.META.HTTP_HOST}}";
     W.API_VERSION = 1;
     var isCreateNewData = {% if is_create_new_data %}true{% else %}false{% endif %};
@@ -174,14 +174,14 @@
             args['id'] = W.activityId;
           }
           W.getApi().call({
-            app: 'apps/event',
-            resource: 'event',
+            app: 'apps/survey',
+            resource: 'survey',
             method: method,
             args: args,
             success: function(data) {
               W.showHint('success', '保存成功');
               _.delay(function() {
-                window.location.href = '/apps/event/events/';
+                window.location.href = '/apps/survey/surveies/';
               }, 500);
             },
             error: function(resp) {
@@ -225,7 +225,7 @@
             page_json: pageJson
           },
           success: function(data) {
-            var previewUrl = '/m/apps/event/m_event/?page_id=preview&woid='+W.uid+'&id='+W.projectId;
+            var previewUrl = '/m/apps/survey/m_survey/?page_id=preview&woid='+W.uid+'&id='+W.projectId;
             window.open('/termite2/app_preview/?preview_url='+encodeURIComponent(previewUrl), '_tab');
           },
           error: function(resp) {
