--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -91,6 +91,13 @@
                 <a data-theme="x" href="/workbench/jqm/preview/?{{homepage_workspace_info|safe}}" data-role="button" class="xui-btn mt20">返回首页</a>
             </div>
         {% else %}
+            <!-- <div data-ui-role="attentionAlert" class="xui-attentionAlert"
+                    data-is-show-button="true"
+                data-url="/aaa"
+                data-id="{{request.webapp_owner_id}}"
+                >
+
+            </div> -->
             <div data-ui-role="attentionAlert" class="xui-attentionAlert"
                 {% if not cur_request_member %}
                     data-is-show-button="true"
@@ -101,7 +108,6 @@
                 data-url="{% if operation_settings %}{{ operation_settings.non_member_followurl }}{% endif %}"
                 data-id="{{request.webapp_owner_id}}"
                 >
-
             </div>
             {% block content-panel %}{% endblock %}
         {% endif %}
