--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/shopping_cart.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/shopping_cart.html
@@ -3,7 +3,7 @@
 
 {% block content-panel %}
 <div id="shopping-cart-content"
-                class="xui-shoppingCartPage"
+                class="xui-shoppingCartPage xa-page"
                 data-role="page"
                 data-theme="x"
                 data-title="{{ page_title }}"
