--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/success.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/success.html
@@ -7,7 +7,7 @@
 	}
 </style>
 {% endblock %} {% block content-panel %}
-<div class="xui-orderResult-page">
+<div class="xui-orderResult-page xa-page">
 	<div class="xui-submitOrder">
 		<div class="xui-successHint">
 			<img src="/static_v2/img/webapp/mall/success.png">
