--- a/weapp/weixin/message/material/templates/material/detail.html
+++ b/weapp/weixin/message/material/templates/material/detail.html
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block content-panel %}
-<div data-role="page" data-theme="x" id="newsDetail" data-title="{{ page_title }}">
+<div data-role="page" data-theme="x" id="newsDetail" data-title="{{ page_title }}" class="xa-page">
     <div data-role="content" style="padding: 15px 15px;" data-theme="x">
         <div class="xui-news-detail-title">{{ page_title }}</div>
         <div class="pt10 pb10">
