--- a/weapp/mall/templates/mall/editor/promotion/premium_sale_detail.html
+++ b/weapp/mall/templates/mall/editor/promotion/premium_sale_detail.html
@@ -134,7 +134,7 @@
 			<div class="form-group">
 				<label class="col-sm-2 xui-i-label fn star_show">活动时间：</label>
 				<div class="col-sm-8 xui-i-content">
-					{{promotion.start_date|date:"Y-m-d H:i:s"}}至{{promotion.end_date|date:"Y-m-d H:i:s"}}
+					{{promotion.start_date}}至{{promotion.end_date}}
 				</div>
 			</div>
 
