--- a/weapp/mall/templates/mall/editor/order_detail.html
+++ b/weapp/mall/templates/mall/editor/order_detail.html
@@ -83,7 +83,10 @@
           {% ifequal action.action 'refund_success' %} xa-refundSuccess{% endifequal %}
           "
           href="javascript:void(0);"
-          {% if action.action == 'update_express' %}data-is-update="true"{%endif%}
+          {% if action.action == 'update_express' %}
+            data-is-update="true"
+            {% ifequal order.express_company_name '' %} style="display:none"{% endifequal %}
+          {%endif%}
           >{{action.name}}</a>
         {% endfor %}
         </div>
