1、删除无用的app 2、修复查看跳转bug 3、增加缺失的文件

--- a/weapp/apps/app_template/templates/editor/resource_list_template.html
+++ b/weapp/apps/app_template/templates/editor/resource_list_template.html
@@ -148,7 +148,7 @@ __STRIPPER_TAG__
 					<a href="javascript:void(0)" class="xa-close" data-id=${item.id}>关闭</a>
 					{{/if}}
 					<a href="javascript:void(0);" class="ml5 xa-preview" data-id=${item.id}>预览</a>
-					<a href="../[[item_resource]]_participances/?id=${item.id}" class="ml5">查看结果</a>
+					<a href="/apps/[[item_resource]]/[[item_resource]]_participances/?id=${item.id}" class="ml5">查看结果</a>
 				</td>
 			</tr>
 			{{/each}}
