--- a/weapp/apps/customerized_apps/event/templates/editor/events.html
+++ b/weapp/apps/customerized_apps/event/templates/editor/events.html
@@ -161,7 +161,7 @@
 					<a href="javascript:void(0)" class="xa-close" data-id=${item.id}>关闭</a>
 					{{/if}}
 					<a href="javascript:void(0);" class="ml5 xa-preview" data-id=${item.id}>预览</a>
-					<a href="../event_participances/?id=${item.id}" class="ml5">查看结果</a>
+					<a href="/apps/event/event_participances/?id=${item.id}" class="ml5">查看结果</a>
 				</td>
 			</tr>
 			{{/each}}
