--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_address.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_address.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content-panel %}
-<div class="xui-address-page xui-page">
+<div class="xui-address-page xui-page xa-page">
   <div class="xui-content">
     <form class="xui-form">
       <fieldset class="xui-section" style="box-shadow:0 0 0;-webkit-box-shadow:0 0 0;">
