--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
@@ -3,7 +3,7 @@
 {% load express_filter %}
 {% load mall_filter %}
 {% block content-panel %}
-<div class="xui-payOrderPage xui-page">
+<div class="xui-payOrderPage xui-page xa-page">
     <!-- 订单详情 -->
 	<fieldset class="xui-section">
         <div class="clearfix xui-inner">
