[test]商品详情页 goBack position

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -8,6 +8,9 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
 .xui-pl0{
     padding: 0;
 }
+.ui-refresh-wrapper{
+    position: relative;
+}
 </style>
 {% endblock %}
 
