--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -1222,15 +1222,10 @@ button.xui-removeImageButton{
 .xui-propertyView-navbar-settings .propertyGroup_property_radioField .propertyGroup_property_label{
 	text-align: left;
 }
-/*.xui-propertyView-navbar-navs .propertyGroup_property_label:first-child{
-	display: none;
-}*/
 .xui-wepage-globalNavPage .xui-propertyView-navbar-navs .propertyGroup_property_dynamicControlField_control{
 	border:1px solid #E6E6E6;
+	padding-left: 15px;
 }
-/*.propertyGroup_property_secondNavsField .propertyGroup_property_input{
-	width: 100%;
-}*/
 .xui-propertyView-navbar-navs .propertyGroup_property_dynamicControlField_control{
 	width: 378px;
 	padding-top: 20px;
@@ -1239,6 +1234,9 @@ button.xui-removeImageButton{
 	display: block;
 	margin-left: -1px;
 	margin-top: 10px;
+}
+.xui-propertyView-navbar-navs .propertyGroup_property_dynamicControlField_control .propertyGroup_property_label{
+	font-weight: bold;
 }
 .propertyGroup_property_secondNavsField .xui-secondNav{
 	margin-left: 44px;
