--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
@@ -79,7 +79,15 @@
 
 
 {% block js %}
+<!-- *start_prunt_task* -->
+	<!-- [prunt_task] 
+	  {
+	    "task": "weizoom-load-app-views-dialogs"
+	  }
+	-->
 {{ "survey"|load_app_views_and_dialogs|safe }}
+<!-- *end_prunt_task* -->
+
 {% verbatim %}
 <script id="table" type="text/x-jquery-tmpl">
 	{{if items!='' }}
