--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -8,15 +8,12 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
 .xui-pl0{
     padding: 0;
 }
-.ui-refresh-wrapper{
-    position: relative;
-}
 </style>
 {% endblock %}
 
 {% block content-panel %}
 <div id="product-detail" class="xui-productDetailPage xui-page xa-page">
-    <div data-role="content" data-theme="x" class="xui-content xa-content">
+    <div data-role="content" data-theme="x" class="xui-content xa-content pr">
         <div
             data-ui-role="swipeimage"
             data-jsondata='{{product.swipe_images_json|safe}}'
