--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -53,46 +53,43 @@
 }
 .wui-appParticipantResult-Cover .wui-i-background {
 	background-color: #FFF;
-	width: 80%;
+	width: 75%;
 	margin: 0px auto;
-	margin-top: 200px;
+	margin-top: 30%;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
 	position: relative;
-	padding-top: 60px;
-	padding-bottom: 40px;
+	padding-top: 8%;
+	padding-bottom: 5%;
 }
 .wui-appParticipantResult-Cover .wui-i-successIcon {
-	border: solid 5px #59C969;
-	height: 80px;
-	width: 80px;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	border-radius: 50%;
-	line-height: 80px;
+	border: 5px solid #59c969;
+    border-radius: 50%;
+    color: #59c969;
+    font-size: 50px;
+    height: 60px;
+    line-height: 60px;
+    margin: 0 auto;
     text-align: center;
-    font-size: 60px;
-    color: #59C969;
-    margin: 0px auto;
+    width: 60px;
 }
 .wui-appParticipantResult-Cover .wui-i-successText {
 	color: #333;
-	font-size: 40px;
+	font-size: 30px;
 	text-align: center;
-	margin-top: 25px;
+	margin-top: 4%;
 }
 .wui-appParticipantResult-Cover .wui-i-info {
 	color: #999;
-	font-size: 25px;
+	font-size: 20px;
 	text-align: center;
-	margin-top: 35px;
+	margin-top: 8%;
 }
 .wui-appParticipantResult-Cover .wui-i-button {
 	margin: 0px auto;
-	margin-top: 50px;
 	text-align: center;
-	margin-top: 35px;
+	margin-top: 6%;
 	background-color: #057FCD;
 	padding: 15px 0px;
 	font-size: 20px;
@@ -112,21 +109,19 @@
 }
 
 .wui-appParticipantResult-Cover .wui-i-close {
-	border: solid 3px #999;
-	height: 30px;
-	width: 30px;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	border-radius: 50%;
-	line-height: 30px;
-    text-align: center;
-    font-size: 20px;
+	border: 2px solid #999;
+    border-radius: 50%;
     color: #999;
-    margin: 0px auto;
-    position: absolute;
-    top: 10px;
-    right: 10px;
     cursor: pointer;
+    font-size: 14px;
+    height: 20px;
+    line-height: 20px;
+    margin: 0 auto;
+    position: absolute;
+    right: 10px;
+    text-align: center;
+    top: 10px;
+    width: 20px;
 }
 
 
@@ -262,7 +257,7 @@
  *
  */
 .wui-submitButton {
-	margin: 26px 10px 0px 10px;
+	margin: 26px 10px;
 }
 .notweixin .wui-submitButton {
 	display: none;
