--- a/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
+++ b/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
@@ -89,7 +89,7 @@
                                 <img class="xui-name-isSelect" src="{% if select.isSelect %} /static_v2/img/selected.png {% else %} /static_v2/img/not_select.png{% endif %}" /><span class="ml5 xa-itemTitle">{{ select.name }}</span>
                                 <span style="display: inline-block;float: right;">{{ select.per }}%</span>
                                 <span style="display: inline-block;float: right; margin-right: 10px">{{ select.count }}票</span>
-                                <div data-per="{{ select.per }}" id="progressbar-{{ item.title }}-{{ select.name }}" class="progressbar"></div>
+                                <div data-per="{{ select.per }}" id="progressbar-{{ item.title }}-{{ select.id_name }}" class="progressbar"></div>
                             </label>
                         </li>
                         {% endfor %}
