--- a/weapp/termite2/templates/termite2/global_navbar_editor.html
+++ b/weapp/termite2/templates/termite2/global_navbar_editor.html
@@ -42,7 +42,7 @@
 		</div>
 	</div>
 
-	<div id="rightPanel" class="fl xui-workbench-rightPanel mb30" style="padding: 0px; background-color: transparent; border: none;">
+	<div id="rightPanel" class="fl xui-workbench-rightPanel mb30" style="padding: 0px; background-color: transparent; border: none;margin-top:10px!important;">
 	</div>
 </div>
 {% endblock %}
