--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_list.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_list.html
@@ -112,7 +112,9 @@
                                         {% endifequal %}
 
                                         {% ifequal order.status 4 %}
-                                            <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=express_detail&action=get&order_id={{order.id}}" class="xui-forPay-btn xui-logistics tc" data-id="{{order.id}}">查看物流</a>
+                                            {% if order.express_number %}
+                                            <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=express_detail&action=get&order_id={{order.id}}" class="xui-forPay-btn xui-logistics tc" data-id="{{order.id}}">查看物流{{order.express_number}}</a>
+                                            {% endif %}
                                             {% if order.session_data.has_comfire_button %}
                                             <a href="javascript:void(0);" class="xui-forPay-btn xui-receipt xa-receipt tc" data-id="{{order.id}}">确认收货</a>
                                             {% endif %}
@@ -378,7 +380,9 @@
                                  <div class="pr15 xui-bottomBtn tl">
                                     <a href="javascript:void(0);"  class="em8 c9">实付款：<span class="em8 cRed">￥{{order.final_price}}</span></a>
                                     <span class="xui-button">
+                                        {% if order.express_number %}
                                         <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=express_detail&action=get&order_id={{order.id}}" class="xui-forPay-btn xui-logistics tc" data-id="{{order.id}}">查看物流</a>
+                                        {% endif %}
                                         {% if order.session_data.has_comfire_button %}
                                         <a href="javascript:void(0);" class="xui-forPay-btn xui-receipt xa-receipt tc"  data-id="{{order.id}}">确认收货</a>
                                         {% endif %}
@@ -483,7 +487,7 @@ $(document).ready(function($) {
         var receipt = confirm("是否确认收货？");
         if (receipt==true){
 
-            $target.buttonLoading({status:'show'});            
+            $target.buttonLoading({status:'show'});
             $('body').alert({
                 isShow: true,
                 info:'正在确认收货...',
