bug x号位置歪了

--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -1242,6 +1242,9 @@ button.xui-removeImageButton{
 	float: left;
 	margin-left: 0px;
 }
+.xui-wepage-globalNavPage button.xui-removeImageButton{
+	right: -5px;
+}
 .xui-wepage-globalNavPage .xui-news-editor-select-link-dialog{
 	float: left;
 	margin-top: 12px;
